# miniWeather

fortran/: CMakeLists.txt  README.md  miniWeather_mpi_openacc.F90  my_get_local_rank
